# CysNet

./: LICENSE  README.md  pyproject.toml
src/cysnet/: __init__.py  app.py  cli.py  colab.py  constraints.py  copyconstraints.py  copynumber.py  meaning.py  oxidia.py  theorem.py  topology.py  widget.py
tests/: test_theorem.py
