[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cysnet"
version = "0.1.0"
description = "Theorem-constrained oxiform inference from bottom-up redox proteomics"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "James N. Cobley"}
]
dependencies = [
    "numpy>=1.23,<2.1",
    "pandas>=1.5,<3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0"
]
widget = [
    "ipywidgets>=8.0"
]
app = [
    "streamlit>=1.30"
]

[project.scripts]
cysnet = "cysnet.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
